syntax = "proto3";

option go_package = "gen/tgblock";

message FilePart {
    string file_id = 1; //
    string hash = 2; //
}

message FileContext {
    string name = 1; //
    int64 file_size = 2; //
    string file_hash = 3; //
    int64 block_count = 4; //
    int64 block_size = 5; //
    int64 create_time = 6; //
    int64 finish_time = 7; //
    repeated FilePart file_list = 8; //
    int64 file_mode = 9; //
}

message SigContext {
    string secret_id = 1; //
    int64 timestamp = 2;//
}

message ShareBlock {
    bytes fileid = 1; //
    int64 timestamp = 2; //
}